change language to english

--- a/i18n/es.yaml
+++ b/i18n/es.yaml
@@ -52,4 +52,4 @@ sharing:
   twitter: "Tuitear en Twitter"
 
 shortcode:
-  recent_articles: "Proyectos recientes"
+  recent_articles: "Recent projects"
